--- a/final.html
+++ b/final.html
@@ -11,7 +11,7 @@
 <body>
     <header id="cabecalho">
         <nav id="menu">
-            <h1>Informações Finais</h1>
+            <h1>Sucesso</h1>
             <ul>
                 <li><a href="endereco.html">Voltar</a></li>
             </ul>
