--- a/final.html
+++ b/final.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Cadastro Bem-Sucessido</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='_css/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./_css/main.css'>
     <script src='main.js'></script>
 </head>
 <body>
